correção do diretório do script e css

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hamburger Menu</title>
+    <title>Mural</title>
 		<meta charset="UTF-8" />
+		<link rel="stylesheet" type="text/css" href="styles.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
 			<a href="https://www.instagram.com/mural.ufc/" target="_blank">
 				<li>Instagram <img src="src/images/instagram.svg" alt="instagram logo"></li>
 			</a>
-				<li>funcionalidades</li>
+				<li>Funcionalidades</li>
 				<li>Quem somos</li>
 			</ul>
 			<a href="https://t.me/muralufc" target="_blank">
@@ -37,7 +38,7 @@
 					</div>
 					<div class="right">
 					<ul class="header">
-								<li>funcionalidades</li>
+								<li>Funcionalidades</li>
 								<li>Quem somos</li>
 							</ul>
 							<a href="https://t.me/muralufc" target="_blank">
@@ -79,7 +80,7 @@
 			</div>
 
 	  <div >
-	 <h1>Nossas funcionalidades</h1>
+	 <h1>Nossas Funcionalidades</h1>
 	 <div class="cards-grid">
 				<div class="card">
 					<img src="src/images/vagas-icon.svg" />
@@ -121,9 +122,11 @@
 					<div>
 						<h1>Vaga de Estágio? Tem no Mural!</h1>
 						<p>O mural te ajuda a encontrar a vaga de estágio perfeita pra você em apenas alguns cliques, acesse o nosso canal no Telegram.</p>
+						<a href="https://t.me/muralufc" target="_blank">
 						<button class="telegram-button">Abrir no Telegram
 						<img src="src/images/telegram-logo.svg"></img>
 						</button>
+						</a>
 					</div>
 			</div>
 
@@ -165,7 +168,7 @@
 							<a href="https://www.instagram.com/mural.ufc/" target="_blank">
 								<li>Instagram <img src="src/images/instagram.svg" alt="instagram logo"></li>
 							</a>
-						<li>funcionalidades</li>
+						<li>Funcionalidades</li>
 						<li>Quem somos</li>
 					</ul>
 					<a href="https://t.me/muralufc" target="_blank">
@@ -178,7 +181,6 @@
 					<p>2022 - Todos os Direitos Reservados</p>
 				</div>
 		</div>
-		<script src="src/index.js">
-		</script>
+		<script src="index.js"></script>
   </body>
 </html>
